--- a/vue-project/src/styles/main.scss
+++ b/vue-project/src/styles/main.scss
@@ -2,15 +2,19 @@
 $lightOrange: #ffca93;
 $lightPeach: #fff4e9;
 $brown: #7f4b13;
+$brownHover: rgba(127, 75, 19, 0.6);
 $darkPeach: #ffdfbe;
 $peach: #ffecd8;
+$extraPeach: #FFECD7;
 $lightBrown: rgba(127, 75, 19, 0.42);
 $brownBorder: #c9955d;
 $orange: #fc8f1a;
 $backgroundOrange: #ff7e5f;
 $backgroundGradient: #feb567;
 
-* {
+*,
+:after,
+:before {
     margin: 0 auto;
     box-sizing: border-box;
 }
